feat: isolate imports by application
